added example of grpc method without annotation
