# api/gen/proto/go/v1/api/service.pb.gw.go
@@ -265,6 +265,40 @@ func local_request_HelloWorld_GreetReverse_0(ctx context.Context, marshaler runt
 
 }
 
+func request_HelloWorld_OriginalGreet_0(ctx context.Context, marshaler runtime.Marshaler, client HelloWorldClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Goodbye
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.OriginalGreet(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_HelloWorld_OriginalGreet_0(ctx context.Context, marshaler runtime.Marshaler, server HelloWorldServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Goodbye
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.OriginalGreet(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterHelloWorldHandlerServer registers the http handlers for service HelloWorld to "mux".
 // UnaryRPC     :call HelloWorldServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -368,6 +402,31 @@ func RegisterHelloWorldHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		}
 
 		forward_HelloWorld_GreetReverse_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_HelloWorld_OriginalGreet_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/v1.api.HelloWorld/OriginalGreet", runtime.WithHTTPPathPattern("/v1.api.HelloWorld/OriginalGreet"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_HelloWorld_OriginalGreet_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_HelloWorld_OriginalGreet_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -500,6 +559,28 @@ func RegisterHelloWorldHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 
 	})
 
+	mux.Handle("POST", pattern_HelloWorld_OriginalGreet_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/v1.api.HelloWorld/OriginalGreet", runtime.WithHTTPPathPattern("/v1.api.HelloWorld/OriginalGreet"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_HelloWorld_OriginalGreet_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_HelloWorld_OriginalGreet_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -511,6 +592,8 @@ var (
 	pattern_HelloWorld_GreetOther2_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "greet", "msg"}, ""))
 
 	pattern_HelloWorld_GreetReverse_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "greet", "reverse", "msg"}, ""))
+
+	pattern_HelloWorld_OriginalGreet_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1.api.HelloWorld", "OriginalGreet"}, ""))
 )
 
 var (
@@ -521,4 +604,6 @@ var (
 	forward_HelloWorld_GreetOther2_0 = runtime.ForwardResponseMessage
 
 	forward_HelloWorld_GreetReverse_0 = runtime.ForwardResponseMessage
+
+	forward_HelloWorld_OriginalGreet_0 = runtime.ForwardResponseMessage
 )
